Fixed a whitespace issue with bulk editing.

--- a/src/jsontree.js.scss
+++ b/src/jsontree.js.scss
@@ -509,7 +509,7 @@ div.json-tree-js {
         cursor: text !important;
         outline: none;
         box-shadow: none;
-        white-space: pre;
+        white-space: pre !important;
     }
 
     div.contents {
